--- a/BarAngel/src/main/res/values/strings.xml
+++ b/BarAngel/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
 
     <string name="app_name">BarAngel</string>
     <string name="action_settings">Settings</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Bar Check in</string>
+    <string name="title_section2">Select Beer</string>
+    <string name="title_section3">Review and Pay</string>
+    <string name="PickBeer">Which Beer would you like?</string>
 
 </resources>
